Updated index and added style sheet

--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tinos&display=swap" rel="stylesheet">
+    <title>Jesse Pollock</title>
+  </head>
+  <body>
+    <div id="wrapper">
+      <header>
+        <h1>Jesse Pollock</h1>
+      </header>
+      <nav>
+        <!-- Coming Soon
+        <a href="">Resume</a>
+        <a href="">Portfolio</a>
+        <a href="">Certificates</a>
+        -->
+        <a href="https://www.linkedin.com/in/jesse-pollock/" target="_blank">LinkedIn</a>
+      </nav>
+      <main>
+        <address>
+          Email: <a href="mailto:jessepollocklives@gmail.com">jessepollocklives@gmail.com</a>
+        </address>
+        <section class="resume-section">
+          <h2>Education</h2>
+          <ul>
+            <li>Chippewa Valley Technical College: A.S. Software Development
+              (2022-2024)</li>
+            <li>IPR - College of Creative Arts: A.A.S. Media Arts (2008-2010)
+              (Cum
+              Laude, Dean's List)</li>
+          </ul>
+        </section>
+        <section class="technologies">
+          <h2>Technologies</h2>
+          <ul>
+            <li>HTML, CSS</li>
+            <li>JavaScript</li>
+            <li>Python</li>
+            <li>MySQL, SQlite</li>
+            <li>Bash, Zsh, PowerShell</li>
+            <li>Git, GitHub</li>
+            <li>Salesforce</li>
+          </ul>
+        </section>
+        <section class="resume-section">
+          <h2>Experience</h2>
+          <ul>
+            <li>Online Banking Consultant, Ally Financial, Shoreview, MN,
+              November
+              2021 - July 2022</li>
+            <li>Software Support Specialist, PartsTrader LLC, Chicago, IL, April
+              2016 - May 2018</li>
+            <li>Software Support Concierge, Volusion LLC, Austin, TX, January
+              2012
+              - January 2013</li>
+            <li>IT Support Intern, Urban Ventures Youth Foundation, Minneapolis,
+              MN, August 2010 - July 2011</li>
+          </ul>
+        </section>
+        <section class="references">
+          <h2>References</h2>
+          <p>References are available upon request.</p>
+        </section>
+      </main>
+      <footer>
+        <small>Copyright &copy; Jesse Pollock 2022</small>
+      </footer>
+    </div>
+  </body>
+</html>
