Update index navigation.  Add code-examples page and updated style.css

--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
         <h1>Jesse Pollock</h1>
       </header>
       <nav>
-        <!-- Coming Soon
-        <a href="">Resume</a>
-        <a href="">Portfolio</a>
-        <a href="">Certificates</a>
-        -->
+        <a href="index.html">Resume</a>
+        <a href="code-examples.html">Code Examples</a>
+        <!--<a href="">Certificates</a> COMING SOON-->
         <a href="https://www.linkedin.com/in/jesse-pollock/" target="_blank">LinkedIn</a>
       </nav>
       <main>
@@ -36,7 +34,7 @@
               Laude, Dean's List)</li>
           </ul>
         </section>
-        <section class="technologies">
+        <section class="resume-section">
           <h2>Technologies</h2>
           <ul>
             <li>HTML, CSS</li>
@@ -63,13 +61,13 @@
               MN, August 2010 - July 2011</li>
           </ul>
         </section>
-        <section class="references">
+        <section class="resume-section">
           <h2>References</h2>
           <p>References are available upon request.</p>
         </section>
       </main>
       <footer>
-        <small>Copyright &copy; Jesse Pollock 2022</small>
+        <small>Copyright &copy; Jesse Pollock 2023</small>
       </footer>
     </div>
   </body>
