--- a/code-examples.html
+++ b/code-examples.html
@@ -25,19 +25,27 @@
         <section class="code-examples">
           <ul>
             <li>
-              <h3>teashop</h3>
-              <p>A simple webpage demonstrating use of CSS Flexbox and
-                Responsive Design</p>
-              <a href="https://github.com/jessepollocklives/teashop"
-                target="blank">github.com/jessepollocklives/teashop</a>
+              <h3><a href="https://github.com/jessepollocklives/changeUp"
+                target="blank">changeUp</a></h3>
+              <p>
+                A simple node app that generates a random activity to help
+                regain focus, enhance creativity and increase productivity.
+              </p>
             </li>
             <li>
-              <h3>harmonicCalculator</h3>
-              <p>A JavaScript program written from scratch which takes a
+              <h3><a href="https://github.com/jessepollocklives/harmonicCalculator"
+                target="blank">harmonicCalculator</a></h3>
+              <p>A JavaScript program for the browser which takes a
                 harmonic frequency as an input and calcuates a given number of
-                harmonics and the musical note it is closest in relation to.</p>
-              <a href="https://github.com/jessepollocklives/harmonicCalculator"
-                target="blank">github.com/jessepollocklives/harmonicCalculator</a>
+                harmonics and the musical note it is closest in relation to.
+              </p>
+            </li>
+            <li>
+              <h3><a href="https://github.com/jessepollocklives/teashop"
+                target="blank">teashop</a></h3>
+              <p>A simple webpage demonstrating use of CSS Flexbox and
+                Responsive Design
+              </p>
             </li>
           </ul>
         </section>
