Fix typo in code-examples

--- a/code-examples.html
+++ b/code-examples.html
@@ -36,7 +36,7 @@
               <h3><a href="https://github.com/jessepollocklives/harmonicCalculator"
                 target="blank">harmonicCalculator</a></h3>
               <p>A JavaScript program for the browser which takes a
-                harmonic frequency as an input and calcuates a given number of
+                fundamental frequency as an input and calcuates a given number of
                 harmonics and the musical note it is closest in relation to.
               </p>
             </li>
