--- a/code-examples.html
+++ b/code-examples.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tinos&display=swap"
       rel="stylesheet">
-    <title>Jesse Pollock Code Examples</title>
+    <title>Jesse Pollock - Code Examples</title>
   </head>
   <body>
     <div id="wrapper">
       <header>
-        <h1>Jesse Pollock - Code Examples</h1>
+        <h1>Code Examples</h1>
       </header>
       <nav>
         <a href="index.html">Resume</a>
@@ -25,6 +25,22 @@
         <section class="code-examples">
           <ul>
             <li>
+              <h3><a href="https://github.com/jessepollocklives/harmonicCalculator"
+                target="blank">harmonicCalculator</a></h3>
+              <p>
+                A JavaScript program for the browser which takes a
+                fundamental frequency as an input and calcuates a given number of
+                harmonics and the musical note it is closest in relation to.
+              </p>
+            </li>
+            <li>
+              <h3><a href="https://github.com/jessepollocklives/quilt">quilt</a></h3>
+              <p>
+                Creates a quilt made from randomly colored squares. I made it for 
+                fun while learning how to manipulate the DOM with JavaScript.  
+              </p>
+            </li>
+            <li>
               <h3><a href="https://github.com/jessepollocklives/changeUp"
                 target="blank">changeUp</a></h3>
               <p>
@@ -33,18 +49,10 @@
               </p>
             </li>
             <li>
-              <h3><a href="https://github.com/jessepollocklives/harmonicCalculator"
-                target="blank">harmonicCalculator</a></h3>
-              <p>A JavaScript program for the browser which takes a
-                fundamental frequency as an input and calcuates a given number of
-                harmonics and the musical note it is closest in relation to.
-              </p>
-            </li>
-            <li>
               <h3><a href="https://github.com/jessepollocklives/teashop"
                 target="blank">teashop</a></h3>
-              <p>A simple webpage demonstrating use of CSS Flexbox and
-                Responsive Design
+              <p>
+                A simple webpage demonstrating responsive design using CSS Flexbox.
               </p>
             </li>
           </ul>
