Update html body structure

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div id="wrapper">
       <header>
         <h1>Jesse Pollock</h1>
+        <nav>
+          <a href="index.html">Resume</a>
+          <a href="code-examples.html">Code Examples</a>
+          <!--<a href="">Certificates</a> COMING SOON-->
+          <a rel="nofollow" href="https://www.linkedin.com/in/jesse-pollock/" target="_blank">LinkedIn</a>
+        </nav>
       </header>
-      <nav>
-        <a href="index.html">Resume</a>
-        <a href="code-examples.html">Code Examples</a>
-        <!--<a href="">Certificates</a> COMING SOON-->
-        <a href="https://www.linkedin.com/in/jesse-pollock/" target="_blank">LinkedIn</a>
-      </nav>
       <main>
         <address>
           Email: <a href="mailto:jessepollocklives@gmail.com">jessepollocklives@gmail.com</a>
