--- a/code-examples.html
+++ b/code-examples.html
@@ -14,13 +14,13 @@
     <div id="wrapper">
       <header>
         <h1>Code Examples</h1>
+        <nav>
+          <a href="index.html">Resume</a>
+          <a href="code-examples.html">Code Examples</a>
+          <!--<a href="">Certificates</a> COMING SOON-->
+          <a rel="nofollow" href="https://www.linkedin.com/in/jesse-pollock/" target="_blank" >LinkedIn</a>
+        </nav>
       </header>
-      <nav>
-        <a href="index.html">Resume</a>
-        <a href="code-examples.html">Code Examples</a>
-        <!--<a href="">Certificates</a> COMING SOON-->
-        <a href="https://www.linkedin.com/in/jesse-pollock/" target="_blank">LinkedIn</a>
-      </nav>
       <main>
         <section class="code-examples">
           <ul>
