--- a/code-examples.html
+++ b/code-examples.html
@@ -28,15 +28,15 @@
               <h3><a href="https://github.com/jessepollocklives/harmonicCalculator"
                 target="blank">harmonicCalculator</a></h3>
               <p>
-                A JavaScript program for the browser which takes a
-                fundamental frequency as an input and calcuates a given number of
-                harmonics and the musical note it is closest in relation to.
+                A JavaScript program for the browser which takes a fundamental 
+                frequency as an input and calcuates a given number of
+                harmonics and the musical note closest in relation.
               </p>
             </li>
             <li>
               <h3><a href="https://github.com/jessepollocklives/quilt">quilt</a></h3>
               <p>
-                Creates a quilt made from randomly colored squares. I made it for 
+                Creates a quilt of randomly colored squares. I made it for 
                 fun while learning how to manipulate the DOM with JavaScript.  
               </p>
             </li>
@@ -44,8 +44,7 @@
               <h3><a href="https://github.com/jessepollocklives/changeUp"
                 target="blank">changeUp</a></h3>
               <p>
-                A simple node app that generates a random activity to help
-                regain focus, enhance creativity and increase productivity.
+                A simple JavaScript program that generates random activities.
               </p>
             </li>
             <li>
