--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Stylesheets-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tinos&display=swap" rel="stylesheet">
+
     <title>Jesse Pollock</title>
   </head>
   <body>
@@ -40,9 +43,9 @@
             <li>HTML, CSS</li>
             <li>JavaScript</li>
             <li>Python</li>
-            <li>MySQL, SQlite</li>
+            <li>SQL, MySQL Workbench</li>
             <li>Bash, Zsh, PowerShell</li>
-            <li>Git, GitHub</li>
+            <li>Git, GitHub, Markdown</li>
             <li>Salesforce</li>
           </ul>
         </section>
