style.css footer

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </section>
         <section class="resume-section">
           <h2>References</h2>
-          <p>References are available upon request.</p>
+          <p>References available upon request.</p>
         </section>
       </main>
       <footer>
