--- a/code-examples.html
+++ b/code-examples.html
@@ -34,7 +34,8 @@
               </p>
             </li>
             <li>
-              <h3><a href="https://github.com/jessepollocklives/quilt">quilt</a></h3>
+              <h3><a href="https://github.com/jessepollocklives/quilt"
+                target="_blank">quilt</a></h3>
               <p>
                 Creates a quilt of randomly colored squares. I made it for 
                 fun while learning how to manipulate the DOM with JavaScript.  
