--- a/code-examples.html
+++ b/code-examples.html
@@ -3,23 +3,36 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tinos&display=swap"
       rel="stylesheet">
+
+    <!-- JS for Nav -->
+    <script src="js/nav.js" defer></script>
+    <script src="https://kit.fontawesome.com/295b1821c2.js"
+      crossorigin="anonymous" defer></script>
     <title>Jesse Pollock - Code Examples</title>
   </head>
   <body>
     <div id="wrapper">
       <header>
-        <h1>Code Examples</h1>
-        <nav>
-          <a href="index.html">Resume</a>
-          <a href="code-examples.html">Code Examples</a>
-          <!--<a href="">Certificates</a> COMING SOON-->
-          <a rel="nofollow" href="https://www.linkedin.com/in/jesse-pollock/" target="_blank" >LinkedIn</a>
-        </nav>
+        <h1>Jesse Pollock</h1>
+        <div id="nav-container">
+          <a href="#" id="nav-active">Code Examples</a>
+          <nav id="nav-menu">
+            <ul>
+              <li><a href="index.html">Resume</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+          <button id="nav-button" class="icon">
+            <i class="fa-solid fa-bars fa-lg"></i>
+          </button>
+        </div>
       </header>
       <main>
         <section class="code-examples">
