--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h2>Technologies</h2>
           <ul>
             <li>HTML, CSS</li>
-            <li>JavaScript</li>
+            <li>JavaScript, Handlebars, Mocha</li>
             <li>Python</li>
             <li>SQL, MySQL Workbench</li>
             <li>Bash, Zsh, PowerShell</li>
