--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="resume-section">
           <h2>Technologies</h2>
           <ul>
-            <li>HTML, CSS</li>
+            <li>HTML, CSS, Bootstrap</li>
             <li>JavaScript, handlebars, mocha</li>
             <li>Python</li>
             <li>SQL, MySQL Workbench</li>
