--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <li>JavaScript, handlebars, mocha</li>
             <li>Python</li>
             <li>SQL, MySQL Workbench</li>
-            <li>Bash, Zsh, PowerShell</li>
+            <li>Bash, Zsh</li>
             <li>Git, GitHub, Markdown</li>
             <li>Salesforce</li>
           </ul>
