--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <section class="resume-section">
           <h2>Experience</h2>
           <ul>
+            <li>Software Support and Training Specialist, Blueprint Solutions, Eden Prairie, MN, Feb 2023 - Present</li>
             <li>Online Banking Consultant, Ally Financial, Shoreview, MN, Nov 2021 - Jul 2022</li>
             <li>Software Support Specialist, PartsTrader LLC, Chicago, IL, Apr 2016 - May 2018</li>
-            <li>IT Support Intern, Urban Ventures, Minneapolis, MN, Aug 2010 - Jul 2011</li>
           </ul>
         </section>
         <section class="resume-section">
