--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
           <ul>
             <li>HTML, CSS, Bootstrap</li>
             <li>JavaScript, handlebars, mocha</li>
-            <li>Python</li>
+            <li>Java, Python</li>
             <li>SQL, MySQL Workbench</li>
             <li>Bash, Zsh</li>
             <li>Git, GitHub, Markdown</li>
-            <li>Salesforce</li>
+            <li>Salesforce, Freshdesk, Confluence, JIRA</li>
           </ul>
         </section>
         <section class="resume-section">
