typo correction in code-examples

--- a/code-examples.html
+++ b/code-examples.html
@@ -42,7 +42,7 @@
                 target="blank">harmonicCalculator</a></h3>
               <p>
                 A JavaScript program for the browser which takes a fundamental 
-                frequency as an input and calcuates a given number of
+                frequency as an input and calculates a given number of
                 harmonics and the musical note closest in relation.
               </p>
             </li>
