add nav-link class on code-examples

--- a/code-examples.html
+++ b/code-examples.html
@@ -25,8 +25,8 @@
           <a href="#" id="nav-active">Code Examples</a>
           <nav id="nav-menu">
             <ul>
-              <li><a href="index.html">Resume</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li class="nav-link"><a href="index.html">Resume</a></li>
+              <li class="nav-link"><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
           <button id="nav-button" class="icon">
